<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/storeDescriptionView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/custom_store_description_view_title"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/storeDescriptionView_address"
        app:layout_constraintTop_toBottomOf="@id/storeDescriptionView_title"
        android:text="@string/custom_store_description_view_address"
        android:fontFamily="@font/roboto_light"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:layout_marginTop="10dp"
        app:drawableTint="@color/black"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/storeDescriptionView_time"
        app:layout_constraintTop_toBottomOf="@id/storeDescriptionView_address"
        android:text="@string/custom_store_description_view_arrival_time"
        android:fontFamily="@font/roboto_light"
        android:drawableStart="@drawable/ic_baseline_timer_24"
        android:layout_marginTop="6dp"
        app:drawableTint="@color/black"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/storeDescriptionView_price"
        app:layout_constraintTop_toBottomOf="@id/storeDescriptionView_time"
        android:text="@string/custom_store_description_view_shipping_fee"
        android:fontFamily="@font/roboto_light"
        android:drawableStart="@drawable/ic_baseline_attach_money_24"
        android:layout_marginTop="6dp"
        app:drawableTint="@color/black"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeDescriptionView_price"
        android:text="@string/custom_store_description_menu"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"

        />

</androidx.constraintlayout.widget.ConstraintLayout>