<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_logo"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="78dp"
        android:src="@drawable/login_icon"
        android:layout_marginTop="76dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        />


    <TextView
        android:id="@+id/textView_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/md_theme_light_primary"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_description"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textAlignment="center"
        android:text="@string/login"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_google_login"
        android:text="@string/login_description"
        android:textAlignment="center"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_google_button"
        app:icon="@drawable/ic_google_16"
        android:paddingHorizontal="24dp"
        android:paddingVertical="18dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:rippleColor="@color/md_theme_light_primary"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="92dp"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>