<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LineItemFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tongue.dandelion.ui.views.NavigationHeaderView
        android:id="@+id/navigationHeaderView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_productImage"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/navigationHeaderView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/pizza_photo"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_name"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/imageView_productImage"
        android:text="@string/line_item_product_name"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="match_parent"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/layout_itemQuantity"
        layout="@layout/layout_item_quantity"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/textView_name"
        app:layout_constraintBottom_toBottomOf="@id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_description"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        android:text="@string/line_item_product_description"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/textView_name"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_productPrice"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@id/textView_description"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/line_item_product_price_label"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_productPriceValue"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@id/textView_productPrice"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/line_item_product_price_value"
        android:textColor="@color/md_theme_light_primary"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_productDeliveryTime"
        app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/textView_description"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/line_item_delivery_time_label"
        android:fontFamily="@font/roboto_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_productDeliveryTimeValue"
        app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/textView_productDeliveryTime"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/line_item_delivery_time_value"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_addToShoppingCart"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedWidth="true"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:backgroundTint="@color/black"
        android:text="@string/line_item_button_add_to_cart"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_shopping_cart_24"
        app:iconTint="@color/white"
        android:layout_marginBottom="32dp"
        android:paddingVertical="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>