<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.StoresFragment"
    >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_order_details"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stores_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textAlignment="textStart"
                android:fontFamily="@font/roboto_bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_greetings"
                android:text="@string/stores_enjoy_message"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="60dp"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_description"
                android:layout_marginTop="20dp"
                app:layout_constrainedWidth="true"
                android:fontFamily="@font/roboto_light"
                android:layout_marginHorizontal="16dp"
                android:text="@string/stores_address"
                android:paddingVertical="10dp"
                android:textAlignment="textStart"
                android:drawableEnd="@drawable/ic_baseline_location_on_24"
                android:drawableTint="@color/black"
                android:backgroundTint="@color/grey_soft"
                android:textColor="@color/black"
                style="@style/Widget.Material3.Button.ElevatedButton"
                app:cornerRadius="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_address"
                android:text="@string/stores"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_label"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_order_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="18dp"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:cornerRadius="36dp"
        android:text="@string/stores_button_order_details"
        android:layout_marginBottom="16dp"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_baseline_shopping_cart_24"
        app:iconPadding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    


</androidx.constraintlayout.widget.ConstraintLayout>