<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.ShoppingCartFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tongue.dandelion.ui.views.NavigationHeaderView
        android:id="@+id/navigationHeaderView_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/navigationHeaderView_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_continue"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_cart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:text="@string/shopping_cart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_total"
                app:layout_constraintTop_toBottomOf="@id/textView_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:text="Total: 55.50$"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_shopping_items"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_total"
                android:paddingVertical="24dp"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMiddle"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineMiddle"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_shopping_items"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/shopping_cart_button_clean"
                android:textColor="@color/black"
                android:paddingVertical="10dp"
                app:cornerRadius="12dp"
                app:strokeColor="@color/md_theme_light_primary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                app:layout_constraintStart_toEndOf="@id/guidelineMiddle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_shopping_items"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/shopping_cart_button_add_articles"
                android:textColor="@color/white"
                android:paddingVertical="10dp"
                app:cornerRadius="12dp"
                style="@style/Widget.MaterialComponents.Button"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_add"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/shopping_cart_note"
                android:textColorHint="@color/black"
                android:paddingHorizontal="16dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="@color/grey_soft"
                android:paddingVertical="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:text="@string/shopping_cart_button_shipping_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        app:rippleColor="@color/black"
        app:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="24dp"
        app:cornerRadius="12dp"
        android:paddingVertical="16dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>