<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingVertical="16dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_location_on_24"
        android:tint="@color/black"
        android:layout_width="24dp"
        android:layout_height="24dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        android:text="Hamburguesas de la 6"
        android:layout_width="match_parent"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/view_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:layout_marginTop="16dp"
        android:background="@color/grey_hard"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        android:layout_marginTop="8dp"
        android:text="@string/checkout_address"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_address"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:fontFamily="@font/roboto_light"
        android:layout_marginHorizontal="16dp"
        android:text="@string/stores_address"
        android:paddingVertical="10dp"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/ic_baseline_location_on_24"
        android:drawableTint="@color/black"
        android:backgroundTint="@color/grey_soft"
        android:textColor="@color/black"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:cornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_amount_to_pay_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_amount_to_pay_value"
        app:layout_constraintTop_toBottomOf="@id/button_address"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constrainedWidth="true"
        android:text="@string/checkout_amount_to_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_amount_to_pay_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_address"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="11.00$"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>